--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>MedicAid | Community Forum for People to Discuss Health Related Issue</title>
+    <title>PostingPage | Pagina para postear cosas random</title>
 
     <meta name="description" content="Amdesk - Help Center HTML template for your digital products">
     <meta name="keywords" content="helpdesk, forum, template, HTML template, responsive, clean">
