--- a/templates/forum-main.html
+++ b/templates/forum-main.html
@@ -11,7 +11,7 @@
 
             <div class="row justify-content-center">
                 <div class="col-xl-7">
-                    <h1 class="h2 mb-30 text-white text-center">A collaborative forum to help people with their health related issue.</h1>
+                    <h1 class="h2 mb-30 text-white text-center">Lugar para compartir experiencias similares.</h1>
                     <form action="{% url 'search-result' %}" class="dx-form dx-form-group-inputs">
                         <input type="text" name="q" value="" class="form-control" placeholder="Search your issue (e.g. asthma, covid)">
                         <button  type="submit" class="dx-btn dx-btn-lg">Search</button>
