--- a/templates/footer.html
+++ b/templates/footer.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="dx-widget-text">
                             <p class="mb-0">&copy; {% now "Y" %}  <span
-                                    class="dib">MedicAid</span> <span class="dib">All rights reserved.</span>
+                                    class="dib">RandomPosteo</span> <span class="dib">All rights reserved.</span>
                             </p>
                         </div>
                         <div class="dx-widget-text">
