--- a/templates/header.html
+++ b/templates/header.html
@@ -68,7 +68,7 @@
         <div class="container">
 
             <a href="{% url 'home' %}" class="dx-nav-logo">
-                <h2 class="text-white" style="margin-top:0px; padding-top:10px; margin-bottom:0;">MedicAid</h2>
+                <h2 class="text-white" style="margin-top:0px; padding-top:10px; margin-bottom:0;">RandomPosteo</h2>
             </a>
 
             
