--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>RandomPosteo| Pagina para postear cosas random</title>
+    <title>MoviesForum| Pagina para postear cosas random</title>
 
     <meta name="description" content="Amdesk - Help Center HTML template for your digital products">
     <meta name="keywords" content="helpdesk, forum, template, HTML template, responsive, clean">
@@ -68,7 +68,7 @@
         <div class="container">
 
             <a href="{% url 'home' %}" class="dx-nav-logo">
-                <h2 class="text-white" style="margin-top:0px; padding-top:10px; margin-bottom:0;">RandomPosteo</h2>
+                <h2 class="text-white" style="margin-top:0px; padding-top:10px; margin-bottom:0;">MoviesForum</h2>
             </a>
 
             
