--- a/templates/blog-listing.html
+++ b/templates/blog-listing.html
@@ -11,7 +11,7 @@
 
             <div class="row justify-content-center">
                 <div class="col-xl-7">
-                    <h1 class="h2 mb-30 text-white text-center">RandomPosteo</h1>
+                    <h1 class="h2 mb-30 text-white text-center">MoviesForum</h1>
                 </div>
             </div>
         </div>
