--- a/templates/topic-detail.html
+++ b/templates/topic-detail.html
@@ -54,7 +54,12 @@
                       </p>
   
                       <div class="dx-comment-text">
-                        <p class="mb-0">{{ answer.content }}</p>
+                        {% if answer.content %}
+                          <p class="mb-0">{{ answer.content }}</p>
+                        {% endif %}
+                        {% if answer.image %}
+                          <img src="{{ answer.image.url }}" alt="Answer Image" width="200">
+                        {% endif %}
                       </div>
                       <div id="vote-section">
                         {% if user.is_authenticated %}
@@ -67,12 +72,11 @@
               {% endfor %}
   
               {% if user.is_authenticated %}
-                <form action="" method="POST" class="dx-form mt-50 mb-45">
-                  <div class="row vertical-gap">
+                <h2>Post a Response:</h2>
+                <form action="" method="POST" enctype="multipart/form-data" class="dx-form mt-50 mb-45">  <div class="row vertical-gap">
                     <div class="col-12">
                       {% csrf_token %}
-                      {{ answer_form }}
-                      <input type="submit" class="dx-btn dx-btn-lg" value="Post Answer">
+                      {{ answer_form.as_p }}  <input type="submit" class="dx-btn dx-btn-lg" value="Post Answer">
                     </div>
                   </div>
                 </form>
