--- a/templates/topic-detail.html
+++ b/templates/topic-detail.html
@@ -57,7 +57,7 @@
                         {% if answer.content %}
                           <p class="mb-0">{{ answer.content }}</p>
                         {% endif %}
-                        {% if answer.image_path %}  <img src="{{ MEDIA_URL }}{{ answer.image_path|slice:'15:' }}" alt="Answer Image" width="200">
+                        {% if answer.image %}  <img src="{{ answer.image.url }}" alt="Answer Image" width="200">
                         {% endif %}
                       </div>
                       <div id="vote-section">
@@ -77,7 +77,8 @@
                     <div class="col-12">
                       {% csrf_token %}
                       {{ answer_form.as_p }}
-                      {{ image_form.as_p }}  <input type="submit" class="dx-btn dx-btn-lg" value="Post Answer">
+                      {{ image_form.as_p }} 
+                      <input type="submit" class="dx-btn dx-btn-lg" value="Post Answer">
                     </div>
                   </div>
                 </form>
