--- a/templates/header.html
+++ b/templates/header.html
@@ -98,6 +98,12 @@
                         
                     </li>
                     
+                    <li class="dx-drop-item">
+                        <a href="{% url 'user-post' %}">
+                            Post A Topic
+                        </a>
+                        
+                    </li>
                 </ul>
 
                 <ul class="dx-nav dx-nav-align-right">
