--- a/registration/templates/registration/register.html
+++ b/registration/templates/registration/register.html
@@ -30,7 +30,7 @@
 
             <div class="dx-form-group-md">
                 <div class="d-flex justify-content-between">
-                    <span style="color:#bababa;">Already have an account?</span>   
+                    <span style="color:#bababa;">Ya tienes una cuenta?</span>   
                     <a href="{% url 'login' %}" style="text-decoration: underline;">Log In</a>
                 </div>
             </div>
@@ -59,10 +59,10 @@
 
  <script>
     var form_fields = document.getElementsByTagName('input')
-    form_fields[1].placeholder = 'Username';
-    form_fields[2].placeholder = 'Email';
-    form_fields[3].placeholder = 'Password';
-    form_fields[4].placeholder = 'Confirm Password';
+    form_fields[1].placeholder = 'Nombre de Usuario';
+    form_fields[2].placeholder = 'Correo';
+    form_fields[3].placeholder = 'Contraseña';
+    form_fields[4].placeholder = 'Confirmar contraseña';
 
     
     var count = 1;
