--- a/templates/header.html
+++ b/templates/header.html
@@ -77,12 +77,12 @@
                 <a class="dropdown-item" href="{% url 'home' %}">Home</a>
                 <div class="dropdown-divider"></div>
                 {% if user.is_authenticated %}
-                <a class="dropdown-item" href="{% url 'user-dashboard' %}">Dashboard</a>
-                <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+                <a class="dropdown-item" href="{% url 'user-dashboard' %}">Menu Usuario</a>
+                <a class="dropdown-item" href="{% url 'profile' %}">Perfil</a>
                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                 {% else %}
                 <a class="dropdown-item" href="{% url 'login' %}">Login</a>
-                <a class="dropdown-item" href="{% url 'register' %}">Register</a>
+                <a class="dropdown-item" href="{% url 'register' %}">Registrarse</a>
                 {% endif %}
             </div>
 
@@ -100,7 +100,7 @@
                     
                     <li class="dx-drop-item">
                         <a href="{% url 'user-post' %}">
-                            Post A Topic
+                            Postea un tema
                         </a>
                         
                     </li>
