--- a/templates/user-dashboard.html
+++ b/templates/user-dashboard.html
@@ -14,7 +14,7 @@
                                 <img style="width: 100px;" style="margin-bottom: 20px;"
                                     src="{{ user.author.profile_pic.url }}" alt="" class="rounded-circle">
                             </div>
-                            <p class="mnt5">{{ user.username }} | Se unio @ {{ user.date_joined|date }}</p>
+                            <p class="mnt5">{{ user.username }} | Se unio el {{ user.date_joined|date }}</p>
                         </div>
                     </div>
                 </div>
