--- a/templates/header.html
+++ b/templates/header.html
@@ -117,10 +117,10 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownSignin">
                                 <li>
-                                    <a href="{% url 'user-dashboard' %}">Dashboard</a>
+                                    <a href="{% url 'user-dashboard' %}">Menu Usuario</a>
                                 </li>
                                 <li>
-                                    <a href="{% url 'profile' %}">Profile</a>
+                                    <a href="{% url 'profile' %}">Perfil</a>
                                 </li>
                                 <li>
                                     <a href="{% url 'logout' %}">Logout</a>
