--- a/templates/topic-detail.html
+++ b/templates/topic-detail.html
@@ -19,7 +19,7 @@
               <p class="mnb-2">{{ topic.description }}</p>
                 
                 {% if answer.image %}  <img src="{{ answer.image.url }}" alt="Answer Image" width="200">
-            
+                {% endif %}
             </div>
   
             <div class="dx-box mt-55">
