--- a/templates/topic-detail.html
+++ b/templates/topic-detail.html
@@ -4,88 +4,81 @@
 
 <div class="dx-box-1 pb-100 bg-grey-6">
     <div class="container">
-      <div class="row vertical-gap md-gap">
-        <div class="col-lg-8">
-  
-            <div class="dx-blog-post dx-box dx-box-decorated">
-                <div class="dx-blog-post-box">
-                  {% if topic.image %}
-                    <img src="{{ topic.image.url }}" alt="Post Image" class="img-fluid mb-3">
-                  {% endif %}
-      
-                  <h1 class="h3 dx-blog-post-title">{{ topic.title }}</h1>
-                  <ul class="dx-blog-post-info">
-                    <li>Date Posted: {{ topic.date_created }}</li>
-                    <li>Total Views: {{ topic.topic_view_count }}</li>
-                    <li>Author: {{ topic.author.user }}</li>
-                  </ul>
-                  <p class="mnb-2">{{ topic.description }}</p>
-                </div>
-              </div>
-  
-          <div class="dx-box mt-55">
-            {% if answers.count > 0 %}
-              <h2 class="h4 mb-45">{{ answers.count }} answer{{ answers|pluralize }} in this topic: </h2>
-            {% else %}
-              <h2 class="h4 mb-45">Be the first to answer in this topic!</h2>
-            {% endif %}
-        
-              {% for answer in answers %}
-                <div class="dx-comment">
-  
-                  <div>
-                    <div class="dx-comment-img">
-                      <img src="{{ answer.user.author.profile_pic.url }}" alt="" class="rounded-circle">
-                    </div>
-                    <div class="dx-comment-cont">
-                      <p class="dx-comment-info">
-                        <span class="dx-comment-name">{{ answer.user|capfirst }}</span>
-  
+        <div class="row vertical-gap md-gap">
+            <div class="col-lg-8">
 
-  
-                        <span class="dx-comment-date">
-                          answered at {{ answer.date_created }}
-                        </span>
-                      </p>
-  
-                      <div class="dx-comment-text">
-                        {% if answer.content %}
-                          <p class="mb-0">{{ answer.content }}</p>
+                <div class="dx-blog-post dx-box dx-box-decorated">
+                    <div class="dx-blog-post-box">
+                        {% if topic.image %}
+                            <img src="{{ topic.image.url }}" alt="Post Image" class="img-fluid mb-3">
                         {% endif %}
-                        {% if answer.image %}  <img src="{{ answer.image.url }}" alt="Answer Image" width="200">
-                        {% endif %}
-                      </div>
-                      <div id="vote-section">
-                        {% if user.is_authenticated %}
-                          {% include 'vote-section.html' %}
-                        {% endif %}
-                      </div>
-                      </div>
-                  </div>
-                </div>
-              {% endfor %}
-  
-              {% if user.is_authenticated %}
-                <h2>Post a Response:</h2>
-                <form action="" method="POST" enctype="multipart/form-data" class="dx-form mt-50 mb-45">
-                  <div class="row vertical-gap">
-                    <div class="col-12">
-                      {% csrf_token %}
-                      {{ answer_form.as_p }}
-                      {{ image_form.as_p }} 
-                      <input type="submit" class="dx-btn dx-btn-lg" value="Post Answer">
+
+                        <h1 class="h3 dx-blog-post-title">{{ topic.title }}</h1>
+                        <ul class="dx-blog-post-info">
+                            <li>Date Posted: {{ topic.date_created }}</li>
+                            <li>Total Views: {{ topic.topic_view_count }}</li>
+                            <li>Author: {{ topic.author.user }}</li>
+                        </ul>
+                        <p class="mnb-2">{{ topic.description }}</p>
                     </div>
-                  </div>
-                </form>
-              {% else %}
-                <p>Please <a href="{% url 'login' %}">log in</a> to post a response.</p>
-              {% endif %}
-  
+                </div>
+
+                <div class="dx-box mt-55">
+                    {% if answers.count > 0 %}
+                        <h2 class="h4 mb-45">{{ answers.count }} answer{{ answers|pluralize }} in this topic:</h2>
+                    {% else %}
+                        <h2 class="h4 mb-45">Be the first to answer in this topic!</h2>
+                    {% endif %}
+
+                    {% for answer in answers %}
+                        <div class="dx-comment">
+                            <div>
+                                <div class="dx-comment-img">
+                                    <img src="{{ answer.user.author.profile_pic.url }}" alt="User Avatar" class="rounded-circle">
+                                </div>
+                                <div class="dx-comment-cont">
+                                    <p class="dx-comment-info">
+                                        <span class="dx-comment-name">{{ answer.user|capfirst }}</span>
+                                        <span class="dx-comment-date">answered at {{ answer.date_created }}</span>
+                                    </p>
+
+                                    <div class="dx-comment-text">
+                                        {% if answer.content %}
+                                            <p class="mb-0">{{ answer.content }}</p>
+                                        {% endif %}
+                                        {% if answer.image %}
+                                            <img src="{{ answer.image.url }}" alt="Answer Image" class="img-fluid mt-3">
+                                        {% endif %}
+                                    </div>
+
+                                    <div id="vote-section">
+                                        {% if user.is_authenticated %}
+                                            {% include 'vote-section.html' %}
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+
+                    {% if user.is_authenticated %}
+                        <h2>Post a Response:</h2>
+                        <form action="" method="POST" enctype="multipart/form-data" class="dx-form mt-50 mb-45">
+                            <div class="row vertical-gap">
+                                <div class="col-12">
+                                    {% csrf_token %}
+                                    {{ answer_form.as_p }}
+                                    <input type="submit" class="dx-btn dx-btn-lg" value="Post Answer">
+                                </div>
+                            </div>
+                        </form>
+                    {% else %}
+                        <p>Please <a href="{% url 'login' %}">log in</a> to post a response.</p>
+                    {% endif %}
+                </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </div>
-  
+</div>
+
 {% endblock content %}
