--- a/templates/forum-main.html
+++ b/templates/forum-main.html
@@ -43,7 +43,7 @@
                     <div class="dx-box dx-box-decorated">
                         <div class="dx-blog-post">
                             <div class="dx-blog-post-box pt-30 pb-30">
-                                <h2 class="h4 mnt-5 mb-9">Posts de discución</h2>
+                                <h2 class="h4 mnt-5 mb-9">Posts de discusión</h2>
                             </div>
                             <div class="table-responsive">
                                 <table class="dx-table dx-table-default">
