--- a/templates/header.html
+++ b/templates/header.html
@@ -79,7 +79,7 @@
                 {% if user.is_authenticated %}
                 <a class="dropdown-item" href="{% url 'user-dashboard' %}">Menu Usuario</a>
                 <a class="dropdown-item" href="{% url 'profile' %}">Perfil</a>
-                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                <a class="dropdown-item" href="{% url 'logout' %}">Salir </a>
                 {% else %}
                 <a class="dropdown-item" href="{% url 'login' %}">Login</a>
                 <a class="dropdown-item" href="{% url 'register' %}">Registrarse</a>
@@ -123,7 +123,7 @@
                                     <a href="{% url 'profile' %}">Perfil</a>
                                 </li>
                                 <li>
-                                    <a href="{% url 'logout' %}">Logout</a>
+                                    <a href="{% url 'logout' %}">Salir </a>
                                 </li>
                             </ul>
                         </div>
