--- a/templates/user-dashboard.html
+++ b/templates/user-dashboard.html
@@ -69,7 +69,7 @@
                                 <table class="dx-table dx-table-default">
                                     <thead>
                                         <tr>
-                                            <th scope="col">Topicoc</th>
+                                            <th scope="col">Topico</th>
                                             <th scope="col">Respuestas</th>
                                             <th scope="col">Upvote</th>
                                             <th scope="col">Downvote</th>
